# trucksim

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.cursor/rules/: python.mdc
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: db.py  main.py  models.py
backend/app/models/: __init__.py  database.py  truck.py
backend/app/services/: db_service.py  redis_service.py
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Dashboard.js  FleetStats.js  Map.js  TruckPopup.js  TruckSearch.js
simulator/: simulator.py  truck_simulator.py
